# project-witness

./: .gitignore  CLAUDE.md  Makefile  PROJECT_SPEC.md  README.md  pyproject.toml
.claude/hooks/: notify-discord.sh  submit-for-review.sh
.coordination/: review-config.yaml
configs/: models.yaml  principles.yaml
configs/benchmarks/: affordances.yaml  basic_physics.yaml  object_permanence.yaml  temporal_causality.yaml
docs/: essay.md
scripts/: run_transforms.py
src/cockpit/: app.py
src/eval/: harness.py  judge.py  metrics.py  reporter.py
src/models/: base.py  gemini.py  qwen_vl.py
src/observer/: clarification.py  consistency.py  gate.py  observer.py  principles.py  self_model.py  uncertainty.py
src/pipeline/: extract.py  ingest.py  schemas.py
src/thor/: agent.py  controller.py  eval_thor.py  planner.py  schemas.py  tasks.py
tests/: test_eval_harness.py  test_observer.py  test_observer_v05.py  test_schemas.py
transforms/marts/: calibration_report.sql  model_comparison.sql  observer_impact.sql
transforms/staging/: stg_eval_results.sql
